[package]
name = "ldjam55"
version = "0.1.0"
publish = false
authors = ["Joseph <joseph.guhlin@gmail.com>"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# [workspace]
# members = ["mobile"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

[lib]
crate-type = ["rlib"]

[dependencies.xxhash-rust]
version = "0.8.10"
features = ["xxh3", "const_xxh3"]

[dependencies]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
bevy_egui = {version = "0.26", default-features = false, features = ["default_fonts", "render"]}
bevy-inspector-egui = "0.23"
egui_plot = "0.27"
bevy_mod_picking = "0.18"
bevy_rand = "0.5"
bevy_prng = { version = "0.5", features = ["wyrand"] }
rand = "0.8.3"
serde = "1.0"
serde_yaml = "0.9"
strum = "0.26.0"
strum_macros = "0.26"
num-traits = "0.2"
num-derive = "0.4"
itertools = "0.12"
once_cell = "1.19.0"
rand_distr = "0.4.3"
rand_core = "0.6.4"
nohash = "0.2.0"
noise = "0.9.0"

log = "0.4"
flexi_logger = "0.28"

# All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
#   and android_shared_stdcxx, since that is covered in `mobile`
# Template provided deps below

bevy = { version = "0.13", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
    "bevy_debug_stepping",
] }
bevy_kira_audio = { version = "0.19" }
bevy_asset_loader = { version = "0.20" }
webbrowser = { version = "0.8", features = ["hardened"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.29", default-features = false }
image = { version = "0.24", default-features = false }
wyrand = "0.1.6"

[build-dependencies]
embed-resource = "1"
